--- a/V CICLO/Taller de Programacion Web/EstilosLogin.css
+++ b/V CICLO/Taller de Programacion Web/EstilosLogin.css
@@ -72,15 +72,25 @@ img{
     background-color: black;
     color: white;
     width: 110px;
-    height: 30px;
+    height: 35px;
 }
+
+
 
 .allign_rigth{
     text-align: right;
     display: block;
     position: relative;
     right: 70px;
+    text-decoration: none;
+    color:#080808;
 }
+
+.allign_rigth:hover{
+    color: #999;
+
+}
+
 .allign_center{
     text-align: center;
     padding: 3px;
@@ -144,4 +154,31 @@ form + div{
     padding: 50px 0px 0px 60px;
     font-size: 30px;
     font-family: 'Cinzel', serif;
+}
+
+.terminos a{
+    font-family: 'Proxima Nova', sans-serif;
+    color: #E0E0E0;
+    text-decoration: none;
+    font-size: 14px;
+
+}
+.terminos{
+    font-family: 'Proxima Nova', sans-serif;
+    color: #E0E0E0;
+    text-decoration: none;
+    font-size: 14px;
+
+}
+
+
+
+input::placeholder{
+        color: #999; /* Cambia el color del marcador de posición */
+}
+
+
+.terminos a:hover {
+    color: #999; /* Cambia el color del texto al pasar el mouse */
+    
 }
