--- a/V CICLO/Taller de Programacion Web/EstilosLogin.css
+++ b/V CICLO/Taller de Programacion Web/EstilosLogin.css
@@ -24,10 +24,13 @@ img{
     max-width: 100%; /* Asegura que la imagen no exceda el ancho del contenedor */
 }
 
-.content_img{
+.content_img {
     grid-column: 3/5;
     grid-row: 3/4;
+    overflow: hidden; /* Evita que los contenidos se salgan del contenedor */
+    position: relative; /* Establece posición relativa para usar posición absoluta en el hijo */
   }
+  
   
 .content_form{
     grid-column: 6/8;
@@ -91,7 +94,7 @@ img{
 .allign_center{
     text-align: center;
     padding: 3px;
-    margin-top: 80px;
+    margin-top: 40px;
 }
 .help{
     color: #4A4A4A;
