--- a/V CICLO/Taller de Programacion Web/EstilosLogin.css
+++ b/V CICLO/Taller de Programacion Web/EstilosLogin.css
@@ -30,6 +30,20 @@ img{
     overflow: hidden; /* Evita que los contenidos se salgan del contenedor */
     position: relative; /* Establece posición relativa para usar posición absoluta en el hijo */
   }
+
+
+.content_img img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+    
+}
+
   
   
 .content_form{
