--- a/V CICLO/Taller de Programacion Web/styles.css
+++ b/V CICLO/Taller de Programacion Web/styles.css
@@ -18,9 +18,9 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 1% 2%;
     width: 100%; /* La barra ocupa el 100% del ancho horizontal */
-    height: 10%; /* La barra ocupa el 10% de la altura */
+    height: auto; /* La barra ocupa el 10% de la altura */
     position: fixed; /* Para que la barra permanezca fija en la parte superior */
     top: 0; /* Para que la barra esté en la parte superior */
     left: 0; /* Para que la barra esté en la parte izquierda */
@@ -29,34 +29,35 @@ body{
 
 .logo {
     color:#E0E0E0;
-    font-size: 30px;
-    margin-left: 41px;
+    font-size: 1.5vw;
+    margin-left: 2.5vw;
     font-family: 'Cinzel', serif; /* Cambia la fuente del logo a Cinzel */
 }
 
 .navbar-links {
-    margin-right: 70px; /* Ajusta el margen derecho del encabezado derecho */
+    margin-right: 5%; /* Ajusta el margen derecho del encabezado derecho */
     font-family: 'Cinzel', serif; /* Cambia la fuente del logo a Cinzel */
-
+    margin-top: 1.8vw;
+    display: flex;
 }
 
 .navbar-links a {
     color: #E0E0E0;
     text-decoration: none;
-    margin-right: 20px;
-    font-size: 17px;
+    margin-right: 2vw;
+    margin-top: 0.7vw;
+    font-size: 1.5vwpx;
 }
 
 .navbar-links button {
     border: none;
     background: none;
-    margin-top: 10px; /* Ajusta el margen superior del botón */
+    margin-top: 0; /* Ajusta el margen superior del botón */
     margin-bottom: 0; /* Elimina el margen inferior del botón */
 }
 
 .navbar-links button img {
-    max-width: 100%; /* Ajusta el ancho máximo de la imagen */
-    max-height: 30px; /* Ajusta el alto máximo de la imagen */
+    max-height: 3vh; /* Ajusta el alto máximo de la imagen */
 }
 
 .navbar-links a:hover {
@@ -79,25 +80,37 @@ body{
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 120px;
+    min-width: 2.083vw;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
+    top: calc(100% + 2px); /* Ajusta la posición vertical para que esté justo debajo del botón */
+    left: 0; /* Ajusta la posición horizontal para que esté alineado con el botón */
 }
 
 .dropdown-content a {
     color: black;
-    padding: 12px 16px;
+    padding: 2% 4%;
     text-decoration: none;
     display: block;
 }
 
 .dropdown-content a:hover {
-    background-color: #f1f1f1;
+    background-color: #f1f1f1; /* Cambia el color de fondo al pasar el mouse */
 }
 
 /* Mostrar el menú desplegable al pasar el ratón sobre el botón */
-.dropdown:hover .dropdown-content {
-    display: block;
+.dropbtn:focus + .dropdown-content,
+.dropdown-content:focus-within {
+    display: block; /* Muestra la lista desplegable cuando el botón tiene foco o la lista desplegable tiene un descendiente con foco */
+}
+
+.dropbtn {
+    width: 2.083vw; /* Define un ancho fijo para el botón */
+    height: 2.083vw; /* Define una altura fija para el botón */
+    padding: 0;
+    background: none;
+    border: none; /* Elimina el borde del botón */
+    cursor: pointer;
 }
 /*-----------------------------------------------------------------------------------------------------------------*/
 
@@ -105,7 +118,7 @@ body{
 
 .contenido img {
     width: 100%; /* Ajusta el ancho de la imagen para que ocupe todo el espacio disponible */
-    height: 100vh;/*Ajustar a la altura de la ventana de la pagina*/
+    height: auto;
 }
 
 /*-----------------------------------------------------------------------------------------------------------------*/
@@ -119,8 +132,8 @@ body{
     z-index: 1; /* Asegura que esté encima de la imagen de fondo */
     color:#FFFFFF;
     font-family: 'Cinzel', serif;
-    font-size: 27px;
-    letter-spacing: 8px;
+    font-size: 1.4vw;
+    letter-spacing: 0.5vw;
 }
 
 .botones {
@@ -135,20 +148,17 @@ body{
 }
 
 .grupo-botones1 {
-    margin-bottom: 150px; /* Espacio entre los grupos de botones */
+    margin-bottom: 2vw; /* Espacio entre los grupos de botones */
 }
 
 .grupo-botones2 {
-    margin-bottom: 0px; /* Espacio entre los grupos de botones */
+    margin-bottom: 0; /* Espacio entre los grupos de botones */
 }
 
 .btn {
-    padding: 10px 20px;
-    margin: 0 60px; /* Espacio entre los botones */
+    padding: 1vw 2vw;
+    margin: 3.125vw; /* Espacio entre los botones */
 }
-
-
-
 
 
 
@@ -163,9 +173,9 @@ body{
     flex-direction: column; /* Apila los elementos verticalmente */
     justify-content: center; /* Centra el contenido horizontalmente */
     align-items: center; /* Centra el contenido verticalmente */
-    padding: 10px 20px;
+    padding: 1% 2%;
     width: 100%;
-    height: 75px; /* Altura de la barra de pie de página */
+    height: auto; /* Altura de la barra de pie de página */
     position: fixed;
     bottom: 0;
     left: 0;
@@ -184,10 +194,10 @@ body{
 .footer-links a {
     color: #E0E0E0;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 0.729vw;
 }
 
 /* Estilo para el texto de derechos de autor */
 .copyright {
-    font-size: 14px;
+    font-size: 0.729vw;
 }
