--- a/V CICLO/Taller de Programacion Web/styles.css
+++ b/V CICLO/Taller de Programacion Web/styles.css
@@ -136,7 +136,7 @@ body{
     font-family: 'Cinzel', serif;
     font-size: 1.4vw;
     letter-spacing: 0.5vw;
-    margin-bottom: 10px;
+    margin-bottom: 0.521vw;
 }
 
 .botones {
@@ -159,20 +159,25 @@ body{
 
 .grupo-botones1{
     display: flex;
-    margin-bottom: 10px; /* Espacio entre los grupos de botones */
-    margin-top: 40px;
+    margin-bottom: 0.521vw; /* Espacio entre los grupos de botones */
+    margin-top: 2.083vw;
 }
 
 .grupo-botones2 {
     display: flex;
-    margin-bottom: 5px; /* Espacio entre los grupos de botones */
-    margin-top: 30px;
+    justify-content: center;
+    margin-bottom: 0.26vw; /* Espacio entre los grupos de botones */
+    margin-top: 1.563vw;
 }
 
 .grupo-botones2 .btn {
-    display: flex;
-    margin-bottom: 5px;
+    padding: 10px 20px;
+    margin-bottom: 0.26vw;
+    text-align: center;
+    width: auto;
 }
+
+
 
 .btn {
     padding: 0.521vw 1.915vw;/* Aumenta el padding horizontal para hacer los botones más largos */
@@ -214,7 +219,7 @@ body{
 }
 
 .footer-links {
-    margin-bottom: 10px; /* Agrega espacio entre el enlace y el texto */
+    margin-bottom: 0.521vw; /* Agrega espacio entre el enlace y el texto */
 
 }
 
@@ -236,20 +241,19 @@ body{
 
 .boton-descripcion {
     text-align: center; /* Centra el contenido dentro del contenedor */
-    margin: 0 10px; /* Espacio entre los botones */
+    margin: 0 0.521vw; /* Espacio entre los botones */
 }
 
 .descripcion {
-    margin-top: 20px; /* Espacio entre la descripción y el botón */
-    padding: 15px; /* Espaciado interno para el recuadro del texto */
+    margin-top: 1.042vw; /* Espacio entre la descripción y el botón */
+    padding: 0.781vw; /* Espaciado interno para el recuadro del texto */
     background-color: rgba(249, 249, 249, 0); /* Color de fondo del recuadro completamente transparente */
     border: none; /* Borde del recuadro */
-    font-size: 13px; /* Tamaño de fuente del texto */
+    font-size: 0.677vw; /* Tamaño de fuente del texto */
     color: #FFFFFF; /* Color del texto */
-    width: 300px; /* Ancho del recuadro de texto */
-    height: 100px; /* Altura del contenedor de texto */
+    width: 16.625vw; /* Ancho del recuadro de texto */
     text-align: center; /* Centra el texto horizontalmente */
     display: inline-block; /* Hace que el contenedor se ajuste al contenido */
-    letter-spacing: 1px;
+    letter-spacing: 0.052vw;
     font-family: 'Proxima Nova', sans-serif;
 }
