--- a/V CICLO/Taller de Programacion Web/pagesAdd/Section1/EstilosS1.css
+++ b/V CICLO/Taller de Programacion Web/pagesAdd/Section1/EstilosS1.css
@@ -123,13 +123,14 @@ body {
 .contenido img {
     width: 100%;
     height: auto;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../img/machu.jpg");
+
 }
 
 .contenido_form {
     position: absolute;
     width: 60%;
     top: 50%;
-
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1;
