--- a/Desktop/Project/styles.css
+++ b/Desktop/Project/styles.css
@@ -257,3 +257,40 @@ body{
     letter-spacing: 0.052vw;
     font-family: 'Proxima Nova', sans-serif;
 }
+
+/*BARRA INFERIOR - PIE DE PÁGINA*/
+.footer {
+    background-color:#080808;
+    color: #E0E0E0;
+    display: flex;
+    flex-direction: column; /* Apila los elementos verticalmente */
+    justify-content: center; /* Centra el contenido horizontalmente */
+    align-items: center; /* Centra el contenido verticalmente */
+    padding: 1% 2%;
+    width: 100%;
+    height: auto; /* Altura de la barra de pie de página */
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+}
+
+.footer-links {
+    margin-bottom: 0.521vw; /* Agrega espacio entre el enlace y el texto */
+
+}
+
+.footer-links a:hover {
+    color: #999; /* Cambia el color del texto al pasar el mouse */
+}
+
+.footer-links a {
+    color: #E0E0E0;
+    text-decoration: none;
+    font-size: 0.729vw;
+}
+
+/* Estilo para el texto de derechos de autor */
+.copyright {
+    font-size: 0.729vw;
+}
